<resources>
    <string name="app_name">Cryptolit</string>
    <string name="title_home">Home</string>
    <string name="cryptolit">Cryptolit</string>
    <string name="favourite_coins">Favourite Coins</string>
    <string name="title_converter">Converter</string>
    <string name="available_coins">Available coins</string>
    <string name="title_search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="slash">/</string>
    <string name="search_for_a_coin">Search for a coin</string>
    <string name="too_many_requests">Too many requests!</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="zero">0</string>
    <string name="coingecko_attribution">Data provided by CoinGecko</string>
</resources>