<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sk.dominikjezik.cryptolit.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_coinDetailsFragment"
            app:destination="@id/coinDetailsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_static"
            app:popEnterAnim="@anim/slide_static"
            app:popExitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="sk.dominikjezik.cryptolit.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="sk.dominikjezik.cryptolit.fragments.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_converter" />
    <fragment
        android:id="@+id/coinDetailsFragment"
        android:name="sk.dominikjezik.cryptolit.fragments.CoinDetailsFragment"
        android:label="fragment_coin_details"
        tools:layout="@layout/fragment_coin_details" >
        <argument
            android:name="coin_id"
            app:argType="string" />
        <argument
            android:name="coin"
            app:argType="sk.dominikjezik.cryptolit.models.Coin" />
    </fragment>
</navigation>