<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:scrollbars="none"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtAppName"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cryptolit"
            app:layout_constraintBottom_toBottomOf="@+id/imgAppIcon"
            app:layout_constraintStart_toEndOf="@+id/imgAppIcon"
            app:layout_constraintTop_toTopOf="@+id/imgAppIcon" />

        <TextView
            android:id="@+id/txtFavouriteCoins"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/favourite_coins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpiFavouriteCoinLoadingIndicator"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavouriteCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingEnd="16dp"
            android:clipToPadding="false"
            android:overScrollMode="always"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFavouriteCoins" />

        <LinearLayout
            android:id="@+id/llSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rvFavouriteCoins">

            <TextView
                android:id="@+id/txtAvailableCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_coins"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:paddingHorizontal="8dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWatchlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchlist"
                android:textAllCaps="true"
                android:textColor="#66FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCoinsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llSubHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>